--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import 'breakpoints';
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -80,6 +82,9 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Work Sans', sans-serif;
+  --icterine: #E8EC67;
+  font-size: 18px;
 }
 
 body {
@@ -92,6 +97,8 @@ body {
     rgb(var(--background-start-rgb)); */
   font-weight: 350;
   min-width: 375px;
+  padding: 0 24px;
+  line-height: 1.6;
 }
 
 a {
@@ -117,4 +124,43 @@ p {
 img {
   max-width: 100%;
   height: auto;
+}
+
+.container {
+  padding: 2rem;
+  white-space: pre-line;
+  max-width: 700px;
+}
+
+ul {
+  list-style: circle;
+  padding-left: 1em;
+  margin: 1em 0;
+}
+
+li {
+  margin-bottom: 1em;
+}
+
+b,
+strong {
+  font-weight: 600;
+}
+
+h1,
+h2,
+h3 {
+  line-height: 1.2;
+  margin-bottom: 0.4em;
+  font-weight: 600;
+}
+
+video.video {
+  width: 100%;
+  border-radius: 6px;
+  margin-bottom: 1em;
+}
+
+.hero__h1 {
+  margin: 0.4em 0;
 }
