--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -140,11 +140,12 @@ img {
 ul {
   list-style: circle;
   padding-left: 1em;
-  margin: 1em 0;
+  margin: 0 0 1em;
+  line-height: 1.2;
 }
 
 li {
-  margin-bottom: 1em;
+  // margin-bottom: 1em;
 }
 
 b,
